	 found only in helper.lua; they no longer need a require to use.
   * Warnings for using deprecated Lua functions now only appear in debug mode.
   * wesnoth.game_config is now accessible in application and mapgen kernels,
     though some of its contents are missing.
   * New extra argument to wesnoth.match_location and wesnoth.get_locations
     allows specifying the teleport_unit.
 * Multiplayer:
   * When set to remember your password, Wesnoth now encrypts it. It is still
     possible to obtain the password from preferences, but it's no longer as
     trivial as before.
 * User Interface:
   * Unit recall dialog now sorts the units by both level and required XP for
     their next level-up (issue #1738).
   * Enable the use of tab to switch between text fields in most dialogs.
   * Color-code modifiers in trait tooltips
   * Translation teams in credits are now listed in alphabetical order of the
     localized language name (rather than the English language name).
   * Allow deleting saves with the Delete key in the Load dialog.
   * Fixed team selection screen often ignoring attempts to scroll (bug #1632).
   * Input Method Editor support in most textboxes (except in-game chat)
 * Miscellaneous and Bug Fixes:
   * Add --report/-R command line switch for printing the same report from the
     Game Version dialog's clipboard function to stdout.
 * WFL Engine
   * Add owner key to terrain space callable, for villages
   * Location formulas in [tunnel] now have a teleport_unit variable
   * Fix a crash when attempting to call a non-existent function
   * The following previously FormulaAI-exclusive functions are now also available
     in filter formulas (SUF, SLF, SSF, SWF):
	 adjacent_locs, location_in_radius, get_unit_type, unit_at, defense_on,
	 chance_to_hit, movement_cost
   * New builtin functions for manipulating locations (available to all formulas):
     adjacent_locs, are_adjacent, relative_dir, direction_from, rotate_loc_around