@@ -547,6 +547,8 @@ int game_lua_kernel::intf_get_displayed_unit(lua_State *L)
 /**
  * Gets all the units matching a given filter.
  * - Arg 1: optional table containing a filter
+ * - Arg 2: optional location (to find all units that would match on that location)
+                  OR unit (to find all units that would match adjacent to that unit)
  * - Ret 1: table containing full userdata with __index pointing to
  *          impl_unit_get and __newindex pointing to impl_unit_set.
  */
@@ -554,15 +556,34 @@ int game_lua_kernel::intf_get_units(lua_State *L)
 {
 	vconfig filter = luaW_checkvconfig(L, 1, true);
 
+	// note that if filter is null, this yields a null filter matching everything (and doing no work)
+	filter_context & fc = game_state_;
+	unit_filter filt(filter, &fc);
+	std::vector<const unit*> units;
+
+	if(unit* u_adj = luaW_tounit(L, 2)) {
+		if(!u_adj) {
+			return luaL_argerror(L, 2, "unit not found");
+		}
+		units = filt.all_matches_with_unit(*u_adj);
+	} else if(!lua_isnoneornil(L, 2)) {
+		map_location loc;
+		luaW_tolocation(L, 2, loc);
+		if(!loc.valid()) {
+			return luaL_argerror(L, 2, "invalid location");
+		}
+		units = filt.all_matches_at(loc);
+	} else {
+		units = filt.all_matches_on_map();
+	}
+
 	// Go through all the units while keeping the following stack:
 	// 1: return table, 2: userdata
 	lua_settop(L, 0);
 	lua_newtable(L);
 	int i = 1;
 
-	// note that if filter is null, this yields a null filter matching everything (and doing no work)
-	filter_context & fc = game_state_;
-	for (const unit * ui : unit_filter(filter, &fc).all_matches_on_map()) {
+	for (const unit * ui : units) {
 		luaW_pushunit(L, ui->underlying_id());
 		lua_rawseti(L, 1, i);
 		++i;
