@@ -17,6 +17,7 @@ Version 1.13.8+dev:
      though some of its contents are missing.
    * New extra argument to wesnoth.match_location and wesnoth.get_locations
      allows specifying the teleport_unit.
+   * Support the extra wesnoth.match_unit arguments also in wesnoth.get_units
  * Multiplayer:
    * When set to remember your password, Wesnoth now encrypts it. It is still
      possible to obtain the password from preferences, but it's no longer as
